src/objects/Trainer__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <label>Trainer</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Trainer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T{0000}</displayFormat>
        <label>Trainer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trainers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>